[package]
name = "naive-stm"
version = "0.1.1"
description = "Software transactional memory (STM)"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.78"
authors = ["Vlad Lopalo"]
repository = "https://github.com/lopalo/naive-stm"

[dependencies]
parking_lot = "0.12.2"
rand = "0.8.5"
rclite = "0.2.4"

[dev-dependencies]
assert_matches = "1.5.0"
